# thedoom

./: .gitignore  gradle.properties  local.properties  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/peterpan/doom/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: prbmsav.dsg
app/src/main/cpp/: am_map.c  am_map.h  d_client.c  d_deh.c  d_deh.h  d_event.h  d_items.c  d_items.h  d_main.c  d_main.h  d_net.h  d_player.h  d_server.c  d_think.h  d_ticcmd.h  doomdata.h  doomdef.c  doomdef.h  doomstat.c  doomstat.h  doomtype.h  dstrings.c  dstrings.h  f_finale.c  f_finale.h  f_wipe.c  f_wipe.h  g_game.c  g_game.h  gl_intern.h  gl_main.c  gl_struct.h  gl_texture.c  hu_lib.c  hu_lib.h  hu_stuff.c  hu_stuff.h  i_joy.h  i_main.c  i_main.h  (+105 more)
app/src/main/cpp/include/: jni_doom.h
app/src/main/java/com/peterpan/doom/: App.kt  BaseActivity.kt  DoomCircumModel.kt  DoomClient.java  DoomClientActivity.java  DoomIntentProcessor.kt  DoomServer.java  DoomServerActivity.java  InitialActivity.kt  InstallActivity.kt  MainActivity.kt
app/src/main/java/com/peterpan/doom/ui/: DoomLoadingState.kt  GameLoadingState.kt
app/src/main/java/com/peterpan/doom/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/peterpan/util/: DialogTool.java  DoomTools.java  GameFileDownloader.java  WebDownload.java
app/src/main/java/com/peterpan/util/audio/: AudioClip.java  AudioManager.java
app/src/main/java/doom/jni/: Natives.java  ServerNatives.java
app/src/main/res/layout/: doom.xml  options.xml
app/src/main/res/layout-land/: doom.xml
app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
app/src/test/java/com/peterpan/doom/: ExampleUnitTest.kt
gamefiles/WAD/: list.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libs/: gepetto-utils-debug.aar  gepetto-utils-release.aar
native/: cheats.txt
native/prboom/: Makefile  jni_doom.c  libdoom.android.mak  m_menu.c  originalread.me
native/prboom/include/: doom_jni_Natives.h
